--- a/cs2/package.json
+++ b/cs2/package.json
@@ -10,12 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@heroicons/react": "^2.2.0",
     "@material-tailwind/react": "^2.1.10",
+    "@mui/icons-material": "^7.0.2",
+    "@mui/material": "^7.0.2",
+    "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/vite": "^4.1.3",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.7.2",
+    "motion": "^12.6.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
